@@ -1,11 +1,13 @@
 package shamsasari.wallhavenplugin;
 
-import jdk.incubator.foreign.*;
-
+import java.lang.foreign.Arena;
+import java.lang.foreign.FunctionDescriptor;
+import java.lang.foreign.Linker;
+import java.lang.foreign.SymbolLookup;
 import java.lang.invoke.MethodHandle;
 import java.nio.file.Path;
 
-import static jdk.incubator.foreign.ValueLayout.*;
+import static java.lang.foreign.ValueLayout.*;
 
 public class WindowsOperatingSystem {
     private static final int SPI_SETDESKWALLPAPER = 0x0014;
@@ -17,16 +19,15 @@ public class WindowsOperatingSystem {
     static {
         System.loadLibrary("user32");
         // BOOL SystemParametersInfoA(UINT uiAction, UINT uiParam, PVOID pvParam, UINT fWinIni);
-        systemParametersInfoAFunction = CLinker.systemCLinker().downcallHandle(
-                SymbolLookup.loaderLookup().lookup("SystemParametersInfoA").get(),
+        systemParametersInfoAFunction = Linker.nativeLinker().downcallHandle(
+                SymbolLookup.loaderLookup().findOrThrow("SystemParametersInfoA"),
                 FunctionDescriptor.of(JAVA_BOOLEAN, JAVA_INT, JAVA_INT, ADDRESS, JAVA_INT)
         );
     }
 
     public static void setWallpaper(Path file) {
-        try (ResourceScope scope = ResourceScope.newConfinedScope()) {
-            SegmentAllocator allocator = SegmentAllocator.nativeAllocator(scope);
-            Addressable nativeFilePath = allocator.allocateUtf8String(file.toString());
+        try (var arena = Arena.ofConfined()) {
+            var nativeFilePath = arena.allocateFrom(file.toString());
             var result = (boolean)systemParametersInfoAFunction.invokeExact(
                     SPI_SETDESKWALLPAPER,
                     0,
